Add hero image and update CSS styling

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <header>
-  <h1>Sadqa‑e‑Khidmat Samaj Seva Foundation</h1>
+  <h1>Sadqa-e-Khidmat Samaj Seva Foundation</h1>
   <p>Registered Society | Govt. of Madhya Pradesh</p>
   <nav>
     <a href="index.html">Home</a>
@@ -17,12 +18,28 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 <main>
   <h2>Welcome</h2>
-  <p>We are a registered social service society working in the fields of health, education, social welfare and public awareness.</p>
+  <p>
+    We are a registered social service society working in the fields of health,
+    education, social welfare and public awareness.
+  </p>
+
+  <img 
+    src="images/community-service.jpg" 
+    alt="Sadqa-e-Khidmat Samaj Seva Foundation community service activity"
+    class="hero-img"
+  >
+
+  <p style="text-align:center; color:#555;">
+    Community service activity conducted by Sadqa-e-Khidmat Samaj Seva Foundation
+  </p>
 </main>
+
 <footer>
-  <p>© 2025 Sadqa‑e‑Khidmat Samaj Seva Foundation</p>
+  <p>© 2025 Sadqa-e-Khidmat Samaj Seva Foundation</p>
 </footer>
+
 </body>
 </html>
