Fix image extension mismatch

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </p>
 
   <img 
-    src="images/community-service.jpg" 
+    src="images/community-service.png" 
     alt="Sadqa-e-Khidmat Samaj Seva Foundation community service activity"
     class="hero-img"
   >
