Add registration certificate PDF

--- a/legal.html
+++ b/legal.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head><title>Registration</title><link rel="stylesheet" href="style.css"></head>
+<head>
+  <title>Registration</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
+
 <h2>Registration Details</h2>
+
 <p>Registered under MP Society Registration Act, 1973</p>
 <p>Date of Registration: 08 December 2025</p>
 <p>District: Agar Malwa, Madhya Pradesh</p>
-<p><strong>Registration Certificate will be uploaded here.</strong></p>
-<a href="index.html">Back</a>
+
+<h3>Registration Certificate</h3>
+
+<iframe 
+  src="docs/registration-certificate.pdf"
+  width="100%"
+  height="600px"
+  style="border:1px solid #ccc; border-radius:8px;">
+</iframe>
+
+<p style="margin-top:15px;">
+  <a href="docs/registration-certificate.pdf" target="_blank">
+    Download Registration Certificate (PDF)
+  </a>
+</p>
+
+<p style="margin-top:20px;">
+  <a href="index.html">Back to Home</a>
+</p>
+
 </body>
 </html>
