Show registration certificate as image only

--- a/legal.html
+++ b/legal.html
@@ -14,18 +14,18 @@
 
 <h3>Registration Certificate</h3>
 
-<iframe 
-  src="docs/registration-certificate.pdf"
-  width="100%"
-  height="600px"
-  style="border:1px solid #ccc; border-radius:8px;">
-</iframe>
-
-<p style="margin-top:15px;">
-  <a href="docs/registration-certificate.pdf" target="_blank">
-    Download Registration Certificate (PDF)
-  </a>
-</p>
+<img 
+  src="images/registration-certificate.png"
+  alt="Registration Certificate of Sadqa-e-Khidmat Samaj Seva Foundation"
+  style="
+    width:100%;
+    max-width:900px;
+    border:1px solid #ccc;
+    border-radius:8px;
+    margin:20px auto;
+    display:block;
+  "
+>
 
 <p style="margin-top:20px;">
   <a href="index.html">Back to Home</a>
