added header and footer

--- a/about.html
+++ b/about.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head><title>About Us</title><link rel="stylesheet" href="style.css"></head>
+<html lang="hi">
+<head>
+<meta charset="UTF-8">
+<title>About Us - Sadqa-e-Khidmat Society</title>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h2>About the Society</h2>
-<p>This society is registered under Madhya Pradesh Society Registration Act, 1973 and operates in District Agar Malwa.</p>
-<a href="index.html">Back</a>
+<header>
+  <h1>Sadqa‑e‑Khidmat Samaj Seva Foundation</h1>
+  <p>Registered Society | Govt. of Madhya Pradesh</p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="objectives.html">Objectives</a>
+    <a href="legal.html">Registration</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+<main>
+  <h2>About the Society</h2>
+  <p>This society is registered under Madhya Pradesh Society Registration Act, 1973 and operates in District Agar Malwa.</p>
+</main>
+<footer>
+  <p>© 2025 Sadqa‑e‑Khidmat Samaj Seva Foundation</p>
+</footer>
 </body>
 </html>
