--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html>
-<head><title>Contact & Office Bearers</title><link rel="stylesheet" href="style.css"></head>
+<html lang="hi">
+<head>
+<meta charset="UTF-8">
+<title>Contact & Office Bearers - Sadqa-e-Khidmat Society</title>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h2>Contact Details</h2>
-<p>Phone: __________</p>
-<p>Email: __________</p>
+<header>
+  <h1>Sadqa‑e‑Khidmat Samaj Seva Foundation</h1>
+  <p>Registered Society | Govt. of Madhya Pradesh</p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="objectives.html">Objectives</a>
+    <a href="legal.html">Registration</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+<main>
+  <h2>Contact Details</h2>
+  <p>Phone: __________</p>
+  <p>Email: __________</p>
 
-<h2>Office Bearers</h2>
-<p>You can add names and roles here later.</p>
-
-<a href="index.html">Back</a>
+  <h2>Office Bearers</h2>
+  <p>You can add names and roles here later.</p>
+</main>
+<footer>
+  <p>© 2025 Sadqa‑e‑Khidmat Samaj Seva Foundation</p>
+</footer>
 </body>
 </html>
