--- a/legal.html
+++ b/legal.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="hi">
 <head>
-  <title>Registration</title>
+  <meta charset="UTF-8">
+  <title>Registration - Sadqa-e-Khidmat Society</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<header>
+  <h1>Sadqa‑e‑Khidmat Samaj Seva Foundation</h1>
+  <p>Registered Society | Govt. of Madhya Pradesh</p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="objectives.html">Objectives</a>
+    <a href="legal.html">Registration</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+<main>
 <h2>Registration Details</h2>
 
 <p>Registered under MP Society Registration Act, 1973</p>
@@ -26,10 +38,9 @@
     display:block;
   "
 >
-
-<p style="margin-top:20px;">
-  <a href="index.html">Back to Home</a>
-</p>
-
+</main>
+<footer>
+  <p>© 2025 Sadqa‑e‑Khidmat Samaj Seva Foundation</p>
+</footer>
 </body>
 </html>
