--- a/objectives.html
+++ b/objectives.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html>
-<head><title>Objectives</title><link rel="stylesheet" href="style.css"></head>
+<html lang="hi">
+<head>
+<meta charset="UTF-8">
+<title>Objectives - Sadqa-e-Khidmat Society</title>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h2>Objectives</h2>
-<ul>
-<li>Health awareness and medical camps</li>
-<li>Education support and skill development</li>
-<li>Women and child welfare</li>
-<li>Environmental protection activities</li>
-<li>Government scheme awareness</li>
-</ul>
-<a href="index.html">Back</a>
+<header>
+  <h1>Sadqa‑e‑Khidmat Samaj Seva Foundation</h1>
+  <p>Registered Society | Govt. of Madhya Pradesh</p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="objectives.html">Objectives</a>
+    <a href="legal.html">Registration</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+<main>
+  <h2>Objectives</h2>
+  <ul>
+  <li>Health awareness and medical camps</li>
+  <li>Education support and skill development</li>
+  <li>Women and child welfare</li>
+  <li>Environmental protection activities</li>
+  <li>Government scheme awareness</li>
+  </ul>
+</main>
+<footer>
+  <p>© 2025 Sadqa‑e‑Khidmat Samaj Seva Foundation</p>
+</footer>
 </body>
 </html>
