--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <a href="legal.html">Registration</a>
     <a href="contact.html">Contact</a>
   </nav>
+  <div id="google_translate_element"></div>
 </header>
 
 <main>
