--- a/objectives.html
+++ b/objectives.html
@@ -19,14 +19,63 @@
 </header>
 <main>
   <h2>Objectives</h2>
-  <ul>
-  <li>Health awareness and medical camps</li>
-  <li>Education support and skill development</li>
-  <li>Women and child welfare</li>
-  <li>Environmental protection activities</li>
-  <li>Government scheme awareness</li>
-  </ul>
-</main>
+ 
+</main><h2>समिति के उद्देश्य</h2>
+
+<ol style="max-width:900px; margin:20px auto; text-align:left; line-height:1.8;">
+
+  <li>
+    स्वास्थ्य एवं परिवार कल्याण कार्यक्रम, टीकाकरण शिविर, रक्तदान शिविर,
+    नेत्र शिविर, परिवार नियोजन कार्यक्रम का संचालन करना।
+  </li>
+
+  <li>
+    शौचालय निर्माण, बेटी बचाओ बेटी पढ़ाओ, स्वच्छता अभियान के
+    कार्यक्रमों का प्रचार-प्रसार एवं संचालन करना।
+  </li>
+
+  <li>
+    मुख्यमंत्री कल्याण योजना का प्रचार-प्रसार कर गरीब एवं
+    निर्धन परिवारों के लिए निःशुल्क सहायता उपलब्ध कराना।
+  </li>
+
+  <li>
+    धार्मिक एवं सामाजिक योजनाओं, दिव्यांग जनों के कल्याण,
+    आर्थिक पीड़ितों के सहयोग हेतु निधियों की स्थापना करना।
+  </li>
+
+  <li>
+    कृषि, ऊर्जा, जल एवं पर्यावरण संरक्षण हेतु नई तकनीकों का
+    विकास एवं प्रचार-प्रसार करना तथा प्रशिक्षण शिविर आयोजित करना।
+  </li>
+
+  <li>
+    राज्य सरकार एवं केंद्र सरकार द्वारा संचालित योजनाओं का
+    क्रियान्वयन एवं लाभ आमजन तक पहुँचाना।
+  </li>
+
+  <li>
+    ग्रामीण एवं शहरी क्षेत्रों में स्वास्थ्य शिविर,
+    निःशुल्क दवा वितरण एवं चिकित्सा सुविधाएँ उपलब्ध कराना।
+  </li>
+
+  <li>
+    सामाजिक कुरीतियों के उन्मूलन हेतु जनजागरूकता अभियान चलाना।
+  </li>
+
+  <li>
+    शिक्षा, रोजगार एवं स्वरोजगार से संबंधित प्रशिक्षण
+    एवं मार्गदर्शन केंद्र स्थापित करना।
+  </li>
+
+  <li>
+    समाज के गरीब एवं पिछड़े वर्ग के बच्चों को शिक्षा हेतु
+    प्रोत्साहित करना एवं उनके सर्वांगीण विकास हेतु कार्य करना।
+  </li>
+
+</ol>
+
+<p>
 <footer>
   <p>© 2025 Sadqa‑e‑Khidmat Samaj Seva Foundation</p>
 </footer>
